--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Chip-8</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type=module src="chip8.js"></script>
-</head>
+ </head>
 <body>
-
+    <script src='./bootstrap.js'></script>
 </body>
 </html>
