Added loading files from browser

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
  </head>
 <body>
     <script type="module" src='./bootstrap.js'></script>
+    <input id="fileButton" type="file"/>
 </body>
 </html>
