--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
  </head>
 <body>
+    <canvas id="canvas"/>
     <script type="module" src='./bootstrap.js'></script>
     <input id="fileButton" type="file"/>
 </body>
