--- a/web/index.html
+++ b/web/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
  </head>
 <body>
-    <canvas id="canvas"/>
-    <script type="module" src='./bootstrap.js'></script>
+    <canvas id="canvas"></canvas><br>
     <input id="fileButton" type="file"/>
+    <script type="module" src='./bootstrap.js'></script>
 </body>
 </html>
