Reorganizing web code

--- a/web/index.html
+++ b/web/index.html
@@ -7,8 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
  </head>
 <body>
-    <canvas id="canvas"></canvas><br>
-    <input id="fileButton" type="file"/>
     <script type="module" src='./bootstrap.js'></script>
+    <div id="screen">
+        <canvas id="canvas"></canvas><br>
+        <input id="fileButton" type="file"/>
+    </div>
+    <div id="debug">
+    </div>
 </body>
 </html>
