--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
 <body>
     <script type="module" src='./bootstrap.js'></script>
     <div id="screen">
-        <canvas id="canvas"></canvas><br>
+        <canvas id="screen-canvas"></canvas><br>
         <input id="fileButton" type="file"/>
     </div>
     <div id="debug">
